# fsb-vorbis-extractor

./: CMakeLists.txt  README.md  TODO
src/: CMakeLists.txt
src/fsb/: container.cpp  container.hpp  extractor.cpp  fsb.hpp
src/fsb/io/: buffer_view.cpp  buffer_view.hpp  filter.cpp  filter.hpp  filter_test.cpp  utility.cpp  utility.hpp  utility_test.cpp
src/fsb/vorbis/: headers.inc  headers_generator.cpp  headers_generator.hpp  headers_generator_test.cpp  headers_generator_tool.cpp  rebuilder.cpp  rebuilder.hpp  rebuilder_test.cpp  vorbis.cpp  vorbis.hpp  vorbis_test.cpp
